[tool.poetry]
name = "flowrhythm"
version = "0.1.0"
description = "Asynchronous job processing framework with dynamic worker scaling"
authors = ["Andrey Maximov"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/maxsimov/flowrhythm"
repository = "https://github.com/maxsimov/flowrhythm"
keywords = ["asyncio", "pipeline", "worker pool", "scaling", "job processing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: System :: Distributed Computing",
  "Topic :: Software Development :: Libraries",
]
packages = [{ include = "flowrhythm" }]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff.lint]
extend-ignore = ["F841", "E701"]
