[project]
name = "flowrhythm"
version = "0.1.0"
description = "Asynchronous job processing framework with dynamic worker scaling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Andrey Maximov" }]
keywords = ["asyncio", "pipeline", "worker pool", "scaling", "job processing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: System :: Distributed Computing",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/maxsimov/flowrhythm"
Repository = "https://github.com/maxsimov/flowrhythm"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff.lint]
extend-ignore = ["F841", "E701"]
