[project]
name = "flowrhythm"
version = "0.2.0"
description = "Asynchronous job processing framework with dynamic worker scaling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Andrey Maximov" }]
keywords = ["asyncio", "pipeline", "worker pool", "scaling", "job processing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/maxsimov/flowrhythm"
Repository = "https://github.com/maxsimov/flowrhythm"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.claude",
  "/.github",
  "/CLAUDE.md",
  "/docs",
  "/todos",
  "/uv.lock",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff.lint]
extend-ignore = ["F841", "E701"]
